--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,13 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
+          <!-- <li>{{ site.title }}</li> -->
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          {% if site.instagram_username %}
+            <li>
+              {% include icon-insta.html username=site.instagram_username %}
+            </li>
+          {% endif %}
         </ul>
       </div>
 
