--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -95,12 +95,11 @@ a {
     text-decoration: none;
 
     &:visited {
-        color: darken($brand-color, 15%);
+        color: $brand-color;
     }
 
     &:hover {
-        color: $text-color;
-        text-decoration: underline;
+        color: darken($brand-color, 20%);
     }
 }
 
