--- a/css/main.scss
+++ b/css/main.scss
@@ -14,9 +14,9 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$text-color:       #444;
+$background-color: #f0b9c5;
+$brand-color:      #6aabba;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
